# Binary

./: .gitignore  LICENSE  pyproject.toml
binary/: __init__.py  other.py  stream.py
