[tool.poetry]
name = "binary"
version = "0.1.0"
description = "Python package containing classes and methods for conveniently handling binary strings"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
